SSCSCI-1728: move panelComp saving to separate method